# project1

./: .gitignore  .gitignore.orig  CMakeLists.txt  README.md  install-deps.sh
cmake/: FindEpoxy.cmake  FindGraphviz.cmake  FindLCM.cmake  Findglfw3.cmake
gtk tutorial/: CMakeLists.txt  example-1.c
src/: CMakeLists.txt  CMakeLists.txt.orig  main.cpp  main.cpp.orig
src2/: CMakeLists.txt  Entity.cpp  Shape.hpp  Triangle.cpp  Triangle.hpp  simtest.cpp  test.cpp  trainingProject1.hpp  trainingProject1Driver.cpp  tutorial1.cpp
